--- a/style.css
+++ b/style.css
@@ -23,12 +23,13 @@
 .baniere-text{
     text-align: center;
     color: #fff;
-    padding-top: 200px;
+    padding-top: 400px;
 }
 
 .baniere-text h1{
-   font-size: 100px; 
-   font-family: 'Lobster', cursive;
+   font-size: 20px; 
+   /*font-family: 'Lobster', cursive;*/
+   font-style: italic;
 }
 
 .baniere-text p{
@@ -51,7 +52,7 @@
     border: 1px solid #fff;
     position: inherit;
     z-index: 1;
-    transition: color 0.6 ease-in;
+    transition: color 0.6s ease-in;
 }
 
 .baniere_btn a span{
@@ -62,50 +63,25 @@
     top: 0;
     left: 0;
     z-index: -1;
-    transition: 0.6 ease-in;
+    transition: 0.6s ease-in;
 }
 
 .baniere_btn a:hover span{
     width: 100%;
 }
 
-.baniere_btn a:hover span{
-    color: #000;
-}
-
 .baniere_btn a:hover{
-    color: #000;
+    color: rgb(0, 0, 0);
 }
 
-nav ul li {
+.nav ul li {
     list-style: none;
     margin: 20px 20px;
 }
 
-nav ul li a{
+.nav ul li a{
     text-decoration: none;
     color: #fff;
-}
-
-
-
-.btn-menu{
-    width: 50px;
-    height: 50px;
-    background: #0676d1;
-    align-items: center;
-    position: fixed;
-    top: 20px;
-    right: 30px;
-    border-radius: 10px;
-    z-index: 3;
-    color: #fff;
-    font-size: 1.6rem;
-    text-align: center;
-    justify-content: center;
-    line-height: 50px;
-    transform: 0.6 ease-in ;
-    cursor: pointer;
 }
 
 @media screen and (max-width: 770px) {
@@ -124,122 +100,90 @@ nav ul li a{
     }
 }
 
-.img-footer{
-    max-width: 200px;
-    opacity: 0.3;
-    position: absolute;
-    left: 49%;
-    top: 50%;
-    transform: translate(-50%, -50);
-    transition: 0.6 ease-in;
+body {
+  background: rgb(0, 0, 0);
+  font-family: Arial, Helvetica, sans-serif;
+  height: 100vh;
+  background: url('ressources/foretlumdown.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  overflow-x: hidden;
 }
 
-.side-nav {
-    position: fixed;
-    height: 100vh;
-    left: 0;
-    top: 0;
-  }
-  
-  /* To hide the sub-nav */
-  .wrapper {
-    background: #333;
-    height: 100vh;
-    width: 75px;
-  }
-  
-  .three-dots-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 60px;
-  }
-  .dot {
-    flex-shrink: 0;
-    margin: 10px 3px;
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    background: #000;
-  }
-  .d1 {background: rgb(0, 0, 0);}
-  .d2 {background: rgb(0, 0, 0);}
-  .d3 {background: rgb(0, 0, 0);}
-  
-  .nav-bloc {
-    padding: 20px 0;
-    display: flex;
-    justify-content: center;
-    cursor: pointer;
-    border-bottom: 1px solid #f2f2f21e;
-  }
-  .nav-bloc:hover {
-    background: rgb(24, 24, 24);
-  }
-  .nav-bloc:hover .sub-nav {
-    transform: translateX(75px);
-  }
-  .nav-bloc svg {
-    width: 25px;
-    fill: #f2f2f2;
-    transition:  0.2s ease-in-out ;
-  }
-  .nav-bloc:hover  svg {
-    fill: #8824ca;
-  }
-  .sub-nav {
-    padding: 0px;
-    width: 200px;
-    height: 100vh;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: #333;
-    z-index: -1;
-    color: white;
-    /* Hidden at the left side */
-    transform: translateX(-100%);
-    transition: transform 0.2s ease-in-out;
-    border-right: 2px solid #000;
-    border-left: 2px solid #000;
-  }
-  .sub-nav h2 {
-    font-family: open sans, sans-serif;
-    height: 60px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #222;
-  }
-  .sub-nav ul {
-    list-style-type: none;
-  }
-  .sub-nav li {
-    padding: 15px 20px;
-  }
-  .sub-nav li:hover {
-    background: rgba(160, 160, 160, 0.555);
-  }
-  .sub-nav li a {
-     color: #f2f2f2;
-     text-decoration: none;
-  }
-  
-  
-  .main-content {
-    padding-left: 75px;
-    color: #f3f3f3;
-  }
-  .main-content h1 {
-    font-family: Open Sans, sans-serif;
-    text-align: center;
-    margin: 30px 0;
-    font-size: 40px;
-  }
-  
-  .main-content p {
-    max-width: 780px;
-    margin: 0 auto;
-    padding: 0 30px;
-    line-height: 1.7;
-  }
+.container-first {
+  position: absolute;
+  top: 10%;
+  left: 5%;
+}
+
+h1 {
+  text-transform: uppercase;
+  font-size: 110px;
+  color: #f1f1f1;
+  font-family: Abril fatface, sans-serif;
+}
+
+h1 span {
+  position: relative;
+}
+.container-btns {
+  position: relative;
+  top: 50px;
+}
+.btn-first {
+  border: 2px solid #f1f1f1;
+  outline: none;
+  background: transparent;
+  font-size: 30px;
+  padding: 20px;
+  width: 300px;
+  color: #f1f1f1;
+  cursor: pointer;
+}
+.btn-first:nth-child(1){
+  margin-right: 30px;
+}
+.btn-first:hover {
+  transition: all 0.3s ease-in-out;
+  background: #f1f1f1;
+  color: #333;
+}
+
+.logo {
+  position: absolute;
+  right: 93%;
+  top: 90%;
+  width: 80px;
+  height: 80px;
+  cursor: pointer;
+}
+.medias {
+  list-style-type: none;
+  position: absolute;
+  right: 1.3%;
+  top: 50%;
+  transform: translateY(-50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.bulle {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  border: 1px solid #f1f1f1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 0;
+  background: #f1f1f1;
+  cursor: pointer;
+  position: relative;
+}
+
+.logo-medias {
+  width: 40px;
+  height: 40px;
+}
