--- a/style.css
+++ b/style.css
@@ -173,7 +173,32 @@ h1 span {
   width: 60px;
   height: 60px;
   border-radius: 50%;
-  border: 1px solid #f1f1f1;
+  border: 5px solid #5a12cc;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 0;
+  background: #f1f1f1;
+  cursor: pointer;
+  position: relative;
+}
+
+.medias1 {
+  list-style-type: none;
+  position: absolute;
+  right: 1.3%;
+  top: 50%;
+  transform: translateY(-50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.bullos {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  border: 5px solid #f4f809;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -186,4 +211,12 @@ h1 span {
 .logo-medias {
   width: 40px;
   height: 40px;
+}
+
+
+
+
+.banieregen {
+  background: linear-gradient(rgba(0, 0, 0, 0.5),  #4822a0), url(https://img.le-dictionnaire.com/violet-couleur.jpg) center/cover no-repeat;
+    height: 100vh;
 }
