--- a/style.css
+++ b/style.css
@@ -183,42 +183,17 @@ h1 span {
   position: relative;
 }
 
-.medias1 {
-  list-style-type: none;
-  position: absolute;
-  right: 1.3%;
-  top: 50%;
-  transform: translateY(-50%);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-.bullos {
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  border: 5px solid #5a12cc;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 10px 0;
-  background: #f1f1f1;
-  cursor: pointer;
-  position: relative;
-}
-
 .logo-medias {
   width: 40px;
   height: 40px;
 }
 
-.btnarcenciel{
+.btngen{
   text-align: center;
   margin-top: 20px;
 }
 
-.btnarcenciel a{
+.btngen a{
   width: 150px;
   text-decoration: none;
   display: inline-block;
@@ -231,48 +206,15 @@ h1 span {
   transition: color 0.6s ease-in;
 }
 
-.btnarcenciel a:hover span{
+.btngen a:hover span{
   width: 100%;
 }
 
-.btnarcenciel a:hover{
+.btngen a:hover{
   color: rgb(0, 0, 0);
 }
 
-.btnarcenciel {
-  padding: 20px 50px;
-  font-size: 1.5rem;
-  cursor: pointer;
-  border: 0px;
-  background: transparent;
-  position: relative;
-  transition: all .2s;
-  overflow: hidden;
-  color: #fff;
-  border-radius: 30px;
-  box-shadow: 0px -0px 0px 0px rgba(143, 64, 248, .5), 0px 0px 0px 0px rgba(39, 200, 255, .5);
-}
 
-.btnarcenciel::after {
-  content: '';
-  width: 400px;
-  height: 400px;
-  position: absolute;
-  top: -50px;
-  left: 700px;
-  background-image: linear-gradient(225deg, #27d86c 0%, #26caf8 50%, #c625d0 100%);
-  z-index: -1;
-  transition: all .5s;
-}
-
-.btnarcenciel:hover::after {
-  transform: rotate(150deg);
-}
-
-.btnarcenciel:hover {
-  transform: translate(0,-6px);
-  box-shadow: 10px -10px 25px 0px rgba(143, 64, 248, .25), -10px 10px 25px 0px rgba(39, 200, 255, .25);
-}
 
 .banieregen {
   background: linear-gradient(rgba(0, 0, 0, 0.5),  #4822a0), url(https://img.le-dictionnaire.com/violet-couleur.jpg) center/cover no-repeat;
