--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@
 
 .baniere_btn{
     text-align: center;
-    margin-top: 20px;
+    margin-top: 80px;
 }
 
 .baniere_btn a{
@@ -156,7 +156,6 @@ h1 span {
   top: 90%;
   width: 80px;
   height: 80px;
-  cursor: pointer;
 }
 .medias {
   list-style-type: none;
@@ -188,35 +187,226 @@ h1 span {
   height: 40px;
 }
 
+
+
+
+
+.stretch, .btngen:after, .btngen:before {
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+}    
+.btngen {
+  background: #6b15ce;
+  background-size: 100%;
+  background-image: -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0%, #6b15ce), color-stop(100%, #0AA0F6));
+  background-image: -moz-linear-gradient(left, #6b15ce, #6b15ce);
+  background-image: -webkit-linear-gradient(left, #6b15ce, #6b15ce);
+  background-image: linear-gradient(to right, #6b15ce, #6b15ce);
+  -moz-border-radius: 1.5em;
+  -webkit-border-radius: 1.5em;
+  border-radius: 1.5em;
+  -moz-transition: opacity 300ms;
+  -o-transition: opacity 300ms;
+  -webkit-transition: opacity 300ms;
+  transition: opacity 300ms;
+  border: none;
+  padding: 20px;
+  color: #FAF15D;
+  font-weight: bold;
+  letter-spacing: 0.05em;
+  outline: none;
+  overflow: hidden;
+  position: absolute;
+  cursor: pointer;
+  z-index: 99;
+}
+.btngen:after {
+  -moz-box-shadow: rgba(212, 207, 201, 0.75) 0 0 15px 2px;
+  -webkit-box-shadow: rgba(212, 207, 201, 0.75) 0 0 15px 2px;
+  box-shadow: rgba(212, 207, 201, 0.75) 0 0 15px 2px;
+  background: #ce1a1a;
+  content: "";
+  height: 2px;
+  opacity: 0;
+}
+.btngen:before {
+  content: "";
+  opacity: 0;
+}
+.btngen:hover {
+  -webkit-animation: glitch 750ms infinite;
+}
+.btngen:hover:before {
+  opacity: 1;
+}
+.btngen:hover:after {
+  -webkit-animation: scan 2s infinite;
+  opacity: 1;
+}
+
+@-webkit-keyframes glitch {
+  0% {
+    -moz-transform: skewX(0deg);
+    -ms-transform: skewX(0deg);
+    -webkit-transform: skewX(0deg);
+    transform: skewX(0deg);
+  }
+  5% {
+    -moz-transform: skewX(2deg);
+    -ms-transform: skewX(2deg);
+    -webkit-transform: skewX(2deg);
+    transform: skewX(2deg);
+    opacity: 0.75;
+  }
+  10% {
+    -moz-transform: skewX(0deg);
+    -ms-transform: skewX(0deg);
+    -webkit-transform: skewX(0deg);
+    transform: skewX(0deg);
+    opacity: 1;
+  }
+  15% {
+    -moz-transform: skewX(-5deg);
+    -ms-transform: skewX(-5deg);
+    -webkit-transform: skewX(-5deg);
+    transform: skewX(-5deg);
+    opacity: 0.75;
+  }
+  20% {
+    -moz-transform: skewX(0deg);
+    -ms-transform: skewX(0deg);
+    -webkit-transform: skewX(0deg);
+    transform: skewX(0deg);
+    opacity: 1;
+  }
+  45% {
+    -moz-transform: skewX(3deg);
+    -ms-transform: skewX(3deg);
+    -webkit-transform: skewX(3deg);
+    transform: skewX(3deg);
+    opacity: 0.75;
+  }
+  50% {
+    -moz-transform: skewX(0deg);
+    -ms-transform: skewX(0deg);
+    -webkit-transform: skewX(0deg);
+    transform: skewX(0deg);
+    opacity: 1;
+  }
+  55% {
+    -moz-transform: skewX(0deg);
+    -ms-transform: skewX(0deg);
+    -webkit-transform: skewX(0deg);
+    transform: skewX(0deg);
+    opacity: 0.75;
+  }
+  60% {
+    -moz-transform: skewX(0deg);
+    -ms-transform: skewX(0deg);
+    -webkit-transform: skewX(0deg);
+    transform: skewX(0deg);
+    opacity: 1;
+  }
+  75% {
+    -moz-transform: skewX(2deg);
+    -ms-transform: skewX(2deg);
+    -webkit-transform: skewX(2deg);
+    transform: skewX(2deg);
+  }
+  80% {
+    -moz-transform: skewX(0deg);
+    -ms-transform: skewX(0deg);
+    -webkit-transform: skewX(0deg);
+    transform: skewX(0deg);
+  }
+  85% {
+    -moz-transform: skewX(-8deg);
+    -ms-transform: skewX(-8deg);
+    -webkit-transform: skewX(-8deg);
+    transform: skewX(-8deg);
+    opacity: 0.75;
+  }
+  90% {
+    -moz-transform: skewX(0deg);
+    -ms-transform: skewX(0deg);
+    -webkit-transform: skewX(0deg);
+    transform: skewX(0deg);
+    opacity: 1;
+  }
+  100% {
+    -moz-transform: skewX(0deg);
+    -ms-transform: skewX(0deg);
+    -webkit-transform: skewX(0deg);
+    transform: skewX(0deg);
+  }
+}
+@-webkit-keyframes scan {
+  0% {
+    top: 0%;
+  }
+  50% {
+    top: 97%;
+  }
+  100% {
+    top: 0%;
+  }
+}
+
+a:link, a:visited
+{
+    color: white;
+    text-decoration: none;
+}
+
 .btngen{
+  top: 451px;
+  left: 44.70%;
+  width: 200px;
   text-align: center;
-  margin-top: 20px;
 }
 
-.btngen a{
-  width: 150px;
-  text-decoration: none;
-  display: inline-block;
-  margin: 0 10px;
-  padding: 12px 0;
-  color: #fff;
-  border: 1px solid #fff;
-  position: inherit;
-  z-index: 1;
-  transition: color 0.6s ease-in;
+.btninvisible {
+  position: relative;
+  text-align: center;
+  width: 50%;
+  position: absolute;
+  top: 49.99%;
+  left: 55%;
 }
 
-.btngen a:hover span{
-  width: 100%;
+.btninvisibleinsta {
+  position: relative;
+  text-align: center;
+  width: 50%;
+  position: absolute;
+  top: 44.5%;
+  left: 72%;
 }
 
-.btngen a:hover{
-  color: rgb(0, 0, 0);
+.btninvisibletwitter {
+  position: relative;
+  text-align: center;
+  width: 50%;
+  position: absolute;
+  top: 53%;
+  left: 72%;
 }
 
+.btninvisiblediscord {
+  position: relative;
+  text-align: center;
+  width: 50%;
+  position: absolute;
+  top: 61.5%;
+  left: 72%;
+}
 
 
 .banieregen {
   background: linear-gradient(rgba(0, 0, 0, 0.5),  #4822a0), url(https://img.le-dictionnaire.com/violet-couleur.jpg) center/cover no-repeat;
     height: 100vh;
 }
+
